day 3 and fix bugs

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T14:47:30.378247079Z",
-     "start_time": "2025-12-22T14:47:30.349943829Z"
+     "end_time": "2025-12-23T17:59:10.550006990Z",
+     "start_time": "2025-12-23T17:59:09.984735870Z"
     }
    },
    "cell_type": "code",
@@ -16,7 +16,7 @@
    ],
    "id": "99a5f3aef5c4dcc8",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -38,6 +38,237 @@
    ],
    "outputs": [],
    "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T17:59:52.869974787Z",
+     "start_time": "2025-12-23T17:59:52.726585771Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "s=pd.read_parquet(\"../data/processed/orders_clean.parquet\")",
+   "id": "6bc30aea2a051e8e",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-23T18:00:01.696305105Z",
+     "start_time": "2025-12-23T18:00:01.491158415Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "s",
+   "id": "64b457f31d8d939a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     order_id user_id  amount  quantity            created_at    status  \\\n",
+       "0       A4434    0021  479.46         6  2025-10-06T15:00:00Z  refunded   \n",
+       "1       A0177    0677  124.64         4  2025-06-15T01:35:00Z  Refunded   \n",
+       "2       A2972    0763     NaN         4  2025-11-14T23:05:00Z  Refunded   \n",
+       "3       A2288    0197  397.26         7  2025-10-16T20:04:00Z      Paid   \n",
+       "4       A3985    0460  374.25         1  2025-01-16T03:21:00Z   Pending   \n",
+       "...       ...     ...     ...       ...                   ...       ...   \n",
+       "5245    A4359    0728  325.60         5  2025-07-06T10:15:00Z  Refunded   \n",
+       "5246    A2386    0289   90.63         3  2025-12-16T01:16:00Z      paid   \n",
+       "5247    A2828    0228  389.80         3  2025-08-21T15:00:00Z      Paid   \n",
+       "5248    A0014    0577  156.48         2  2025-12-19T10:54:00Z  refunded   \n",
+       "5249    A0473    0332   47.40         1  2025-06-09T00:31:00Z    refund   \n",
+       "\n",
+       "     status_clean  amount__isna  quantity__isna  \n",
+       "0          refund         False           False  \n",
+       "1          refund         False           False  \n",
+       "2          refund          True           False  \n",
+       "3            paid         False           False  \n",
+       "4         pending         False           False  \n",
+       "...           ...           ...             ...  \n",
+       "5245       refund         False           False  \n",
+       "5246         paid         False           False  \n",
+       "5247         paid         False           False  \n",
+       "5248       refund         False           False  \n",
+       "5249       refund         False           False  \n",
+       "\n",
+       "[5250 rows x 9 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>status</th>\n",
+       "      <th>status_clean</th>\n",
+       "      <th>amount__isna</th>\n",
+       "      <th>quantity__isna</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A4434</td>\n",
+       "      <td>0021</td>\n",
+       "      <td>479.46</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2025-10-06T15:00:00Z</td>\n",
+       "      <td>refunded</td>\n",
+       "      <td>refund</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A0177</td>\n",
+       "      <td>0677</td>\n",
+       "      <td>124.64</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2025-06-15T01:35:00Z</td>\n",
+       "      <td>Refunded</td>\n",
+       "      <td>refund</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A2972</td>\n",
+       "      <td>0763</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2025-11-14T23:05:00Z</td>\n",
+       "      <td>Refunded</td>\n",
+       "      <td>refund</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A2288</td>\n",
+       "      <td>0197</td>\n",
+       "      <td>397.26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2025-10-16T20:04:00Z</td>\n",
+       "      <td>Paid</td>\n",
+       "      <td>paid</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A3985</td>\n",
+       "      <td>0460</td>\n",
+       "      <td>374.25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2025-01-16T03:21:00Z</td>\n",
+       "      <td>Pending</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5245</th>\n",
+       "      <td>A4359</td>\n",
+       "      <td>0728</td>\n",
+       "      <td>325.60</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2025-07-06T10:15:00Z</td>\n",
+       "      <td>Refunded</td>\n",
+       "      <td>refund</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5246</th>\n",
+       "      <td>A2386</td>\n",
+       "      <td>0289</td>\n",
+       "      <td>90.63</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2025-12-16T01:16:00Z</td>\n",
+       "      <td>paid</td>\n",
+       "      <td>paid</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5247</th>\n",
+       "      <td>A2828</td>\n",
+       "      <td>0228</td>\n",
+       "      <td>389.80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2025-08-21T15:00:00Z</td>\n",
+       "      <td>Paid</td>\n",
+       "      <td>paid</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5248</th>\n",
+       "      <td>A0014</td>\n",
+       "      <td>0577</td>\n",
+       "      <td>156.48</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2025-12-19T10:54:00Z</td>\n",
+       "      <td>refunded</td>\n",
+       "      <td>refund</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5249</th>\n",
+       "      <td>A0473</td>\n",
+       "      <td>0332</td>\n",
+       "      <td>47.40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2025-06-09T00:31:00Z</td>\n",
+       "      <td>refund</td>\n",
+       "      <td>refund</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5250 rows × 9 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
