update eda and create readme file

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:29:52.605376568Z",
-     "start_time": "2025-12-24T17:29:52.056823077Z"
+     "end_time": "2025-12-25T12:51:30.710959222Z",
+     "start_time": "2025-12-25T12:51:30.630271313Z"
     }
    },
    "cell_type": "code",
@@ -16,30 +16,115 @@
    ],
    "id": "88893470aa5813e9",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 25
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# questions:\n",
+    "- Revenue by country\n",
+    "- Revenue trend (monthly)\n",
+    "- Amount distribution (winsorized)"
+   ],
+   "id": "c9f4a0de320715ba"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:29:52.623618636Z",
-     "start_time": "2025-12-24T17:29:52.611366631Z"
+     "end_time": "2025-12-25T14:12:12.918705894Z",
+     "start_time": "2025-12-25T14:12:12.907222364Z"
     }
    },
    "cell_type": "code",
    "source": [
     "DATA = Path(\"../data/processed/analytics_table.parquet\")\n",
     "FIGS = Path(\"../reports/figures\")\n",
-    "FIGS.mkdir(parents=True, exist_ok=True)"
+    "FIGS.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "DEFAULT_RAW_DIR = Path(\"../data/raw\")\n",
+    "DEFAULT_RAW_DIR.mkdir(parents=True, exist_ok=True)\n"
    ],
    "id": "5ed9a2a780653e5e",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:29:52.635680218Z",
-     "start_time": "2025-12-24T17:29:52.626596993Z"
+     "end_time": "2025-12-25T14:45:26.166319066Z",
+     "start_time": "2025-12-25T14:45:25.995398892Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
+    "\n",
+    "from python_scripts import run_day1_load,run_day2_clean,run_day3_build_analytics\n",
+    "\n",
+    "\n",
+    "run_day1_load.main()\n",
+    "run_day2_clean.main()\n",
+    "run_day3_build_analytics.main()\n"
+   ],
+   "id": "e9b7a469da5667cd",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO python_scripts.run_day1_load: Loaded rows: orders=5250 users=1000\n",
+      "INFO python_scripts.run_day1_load: Orders dtypes:\n",
+      "order_id       object\n",
+      "user_id        object\n",
+      "amount        float64\n",
+      "quantity        Int64\n",
+      "created_at     object\n",
+      "status         object\n",
+      "dtype: object\n",
+      "INFO python_scripts.run_day1_load: Wrote: /home/khaled/SDAIA/week_2/data/processed\n",
+      "INFO python_scripts.run_day1_load: Run meta: /home/khaled/SDAIA/week_2/data/processed/_run_meta.json\n",
+      "INFO python_scripts.run_day2_clean: loading raw inputs\n",
+      "INFO python_scripts.run_day2_clean: rows: order_raw=5250, users=1000\n",
+      "INFO python_scripts.run_day2_clean: wrote missingness report : /home/khaled/SDAIA/week_2/reports/missingness_order.csv\n",
+      "INFO python_scripts.run_day2_clean: wrote processed output: /home/khaled/SDAIA/week_2/data/processed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "missing created_at after parse: 507 / 5250\n",
+      "rows: 5250\n",
+      "country match rate: 1.0\n",
+      "wrote: /home/khaled/SDAIA/week_2/data/processed/analytics_table.parquet\n",
+      "  country     n    revenue\n",
+      "0      AE  1348  324843.68\n",
+      "1      KW  1326  307761.92\n",
+      "2      QA  1344  292329.93\n",
+      "3      SA  1232  286976.39\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/khaled/SDAIA/week_2/src/bootcamp_data/transforms.py:45: UserWarning:\n",
+      "\n",
+      "Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 46
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-25T12:51:31.264956183Z",
+     "start_time": "2025-12-25T12:51:31.194824932Z"
     }
    },
    "cell_type": "code",
@@ -51,13 +136,13 @@
    ],
    "id": "8922bb691d42b681",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:29:53.029589969Z",
-     "start_time": "2025-12-24T17:29:52.941448385Z"
+     "end_time": "2025-12-25T12:51:31.780150431Z",
+     "start_time": "2025-12-25T12:51:31.687945868Z"
     }
    },
    "cell_type": "code",
@@ -106,13 +191,13 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:29:54.134613545Z",
-     "start_time": "2025-12-24T17:29:53.865021119Z"
+     "end_time": "2025-12-25T12:51:32.093254532Z",
+     "start_time": "2025-12-25T12:51:31.896645919Z"
     }
    },
    "cell_type": "code",
@@ -440,18 +525,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:29:54.832377468Z",
-     "start_time": "2025-12-24T17:29:54.694993996Z"
+     "end_time": "2025-12-25T12:51:32.355286224Z",
+     "start_time": "2025-12-25T12:51:32.273210465Z"
     }
    },
    "cell_type": "code",
@@ -480,18 +565,18 @@
        " 3      SA  1232  286976.39  257.840422,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:29:55.864617700Z",
-     "start_time": "2025-12-24T17:29:55.731239337Z"
+     "end_time": "2025-12-25T12:51:32.902261572Z",
+     "start_time": "2025-12-25T12:51:32.694869743Z"
     }
    },
    "cell_type": "code",
@@ -524,13 +609,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:30:00.214992883Z",
-     "start_time": "2025-12-24T17:29:56.834390548Z"
+     "end_time": "2025-12-25T12:51:37.988879427Z",
+     "start_time": "2025-12-25T12:51:33.129649813Z"
     }
    },
    "cell_type": "code",
@@ -1403,13 +1488,13 @@
      }
     }
    ],
-   "execution_count": 8
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:36:35.971256426Z",
-     "start_time": "2025-12-24T17:36:35.873173206Z"
+     "end_time": "2025-12-25T12:51:38.049846201Z",
+     "start_time": "2025-12-25T12:51:37.992990133Z"
     }
    },
    "cell_type": "code",
@@ -1426,13 +1511,13 @@
    ],
    "id": "af99f10ab56fd85c",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:40:12.544879959Z",
-     "start_time": "2025-12-24T17:40:09.501721104Z"
+     "end_time": "2025-12-25T12:51:43.897420874Z",
+     "start_time": "2025-12-25T12:51:38.052024128Z"
     }
    },
    "cell_type": "code",
@@ -2314,13 +2399,19 @@
      }
     }
    ],
-   "execution_count": 11
+   "execution_count": 34
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "a501ddb1dcd86bf0"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:43:25.674667400Z",
-     "start_time": "2025-12-24T17:43:22.365674682Z"
+     "end_time": "2025-12-25T13:27:03.007866648Z",
+     "start_time": "2025-12-25T13:26:57.650516106Z"
     }
    },
    "cell_type": "code",
@@ -2329,7 +2420,7 @@
     "fig.update_layout(title={\"x\": 0.02})\n",
     "fig.update_xaxes(title_text=\"Amount (winsorized)\")\n",
     "fig.update_yaxes(title_text=\"Number of orders\")\n",
-    "save_fig(fig, FIGS / \"amount_hist_winsor.png\")\n",
+    "save_fig(fig, FIGS / \"amount_hist_winsor.png\", )\n",
     "fig"
    ],
    "id": "108100b8620734c1",
@@ -3188,13 +3279,13 @@
      }
     }
    ],
-   "execution_count": 12
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-24T17:51:19.214871670Z",
-     "start_time": "2025-12-24T17:51:18.987756136Z"
+     "end_time": "2025-12-25T12:51:48.416901078Z",
+     "start_time": "2025-12-25T12:51:48.171893024Z"
     }
    },
    "cell_type": "code",
@@ -3238,15 +3329,20 @@
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 36
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-25T12:50:54.724464263Z",
+     "start_time": "2025-12-25T12:50:54.658454837Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "3436008684b685c8"
+   "id": "3436008684b685c8",
+   "outputs": [],
+   "execution_count": 24
   }
  ],
  "metadata": {
